(#3) Added Search Instrument Endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
+# Postgres (Neon)
 # DATABASE_URL=postgres://tester:tester@db:5432/cocos_test
 DATABASE_URL=postgres://tester:tester@localhost:5432/cocos_test
+
 DB_SSL=false
 DB_POOL_MAX=10
+
+POSTGRES_USER=tester
+POSTGRES_PASSWORD=tester
+POSTGRES_DB=cocos_test
+
 ENV=development
