--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,21 @@
 services:
   db:
-    image: postgres:15
+    image: postgres:16
     container_name: cocos_db
+    restart: unless-stopped
     env_file:
       - .env
     ports:
       - "5432:5432"
     volumes:
-      - ./src/db/test-database.sql:/docker-entrypoint-initdb.d/test-database.sql
+      - pg_data:/var/lib/postgresql/data
+      - ./docker/initdb:/docker-entrypoint-initdb.d:ro
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U tester -d cocos_test"]
       interval: 5s
       timeout: 3s
-      retries: 10
-    restart: unless-stopped
-    
+      retries: 20
+
   api:
     build: .
     env_file:
@@ -24,3 +25,6 @@ services:
         condition: service_healthy
     ports:
       - "3000:3000"
+  
+volumes:
+  pg_data:
