--- a/package.json
+++ b/package.json
@@ -13,14 +13,13 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register ./node_modules/jest/bin/jest.js --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-commonjs -d src/db/data-source.ts",
-    "migration:create": "npm run typeorm -- migration:create src/db/migrations",
-    "migration:generate": "npm run typeorm -- migration:generate src/db/migrations",
+    "test": "cross-env NODE_ENV=test jest",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:cov": "cross-env NODE_ENV=test jest --coverage",
+    "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register ./node_modules/jest/bin/jest.js --runInBand",
+    "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json",
+    "typeorm": "node ./src/scripts/typeorm-shim.cjs -d ./src/db/data-source.ts",
+    "migration:generate": "npm run typeorm -- migration:generate ./src/db/migrations/InitMigration",
     "migration:run": "npm run typeorm -- migration:run",
     "migration:revert": "npm run typeorm -- migration:revert"
   },
@@ -52,6 +51,7 @@
     "@types/jest": "^30.0.0",
     "@types/node": "^22.18.3",
     "@types/supertest": "^6.0.3",
+    "cross-env": "^10.0.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
@@ -80,7 +80,11 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "**/*.ts",
+      "!main.ts",                 
+      "!scripts/**",              
+      "!db/migrations/**",        
+      "!**/*.module.ts"          
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
