--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,15 @@
-# Postgres (Neon)
-# DATABASE_URL=postgres://tester:tester@db:5432/cocos_test
-DATABASE_URL=postgres://tester:tester@localhost:5432/cocos_test
+# For docker.
+DATABASE_URL=postgres://tester:tester@db:5432/cocos_dev
+TEST_DATABASE_URL=postgres://tester:tester@db:5432/cocos_test
+
+# For local development.
+# DATABASE_URL=postgres://tester:tester@localhost:5432/cocos_dev
+# TEST_DATABASE_URL=postgres://tester:tester@localhost:5432/cocos_test
 
 DB_SSL=false
 DB_POOL_MAX=10
 
 POSTGRES_USER=tester
 POSTGRES_PASSWORD=tester
-POSTGRES_DB=cocos_test
 
 ENV=development
